# dspy-rag-tutorial

./: .env.example  .gitignore  README.md  package-lock.json  rag_advanced.py  rag_example.py  requirements.txt
DSPy-Supabase-RAG/: .env.example  README.md  START_HERE.md  __init__.py  download_samples.py  embeddings.py  evaluation.py  pdf_processor.py  pyproject.toml  rag_pipeline.py  requirements.txt  results.json  results.md  retriever.py  test_set.json
agentic_rag/: README.md  agentic_rag_example.py  requirements.txt
contextual_rag/: .chunk_cache.json  README.md  contextual_rag.py  requirements.txt
